--- a/sections/ShinkanSec/template.html
+++ b/sections/ShinkanSec/template.html
@@ -12,7 +12,7 @@
           large
           href="https://docs.google.com/forms/d/e/1FAIpQLSdgNDLPPNSufGF00UfJBSel09HuOt_1EF_ye_8PqMO7EzA77Q/viewform"
           target="_blank"
-          style="font-size: 1.5em; padding: 1em 2em;border-radius: 50px;"
+          style="font-size: 1.5em; margin-top: 1em;border-radius: 50px;"
         >
           新歓応募フォームはこちら！
         </v-btn>
