--- a/sections/ConSec/template.html
+++ b/sections/ConSec/template.html
@@ -88,7 +88,7 @@
           ></img> -->
         <h3>メールからお問い合わせ</h3>
 
-        <h4>・tune05155@gmail.com</h4>
+        <h4>・handaioutf.shinkan@gmail.com</h4>
       </v-col>
     </v-row>
   </v-container>
